--- a/src/index.html
+++ b/src/index.html
@@ -2,72 +2,78 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta 
+    <meta
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     >
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="ie=edge"
+    >
     <title>HTML Form</title>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
-      <fieldset>
+    <form
+      action="https://mate-academy-form-lesson.herokuapp.com/create-application"
+      method="post"
+    >
+      <fieldset class="field">
         <legend>Personal information</legend>
-        <label class="foarm-field" required>
+        <label class="form-field" required>
             Surname:
-          <input 
-            type="text" 
-            name="Surname" 
-            required 
+          <input
+            type="text"
+            name="Surname"
+            required
             autocomplete="off"
           >
         </label>
 
-        <label class="foarm-field">
-            Name:
+        <label class="form-field">
+          Name:
           <input
-             type="text" 
-             name="Name" 
-             required 
-             autocomplete="off"
-            >
+            type="text"
+            name="Name"
+            required
+            autocomplete="off"
+          >
         </label>
 
-        <label class="foarm-field">
+        <label class="form-field">
           How old are You?
-          <input 
-              type="number" 
-              name="How old are You?" 
-              min="1" 
-              max="100" 
-              value="12" 
-              required
+          <input
+            type="number"
+            name="How old are You?"
+            min="1"
+            max="100"
+            value="12"
+            required
           >
         </label>
 
-        <label class="foarm-field">
+        <label class="form-field">
           Full date of birth:
-          <input 
-              type="date" 
-              name="Full date of birth"
+          <input
+            type="date" 
+            name="Full date of birth"
           >
         </label>
 
-        <label class="foarm-field">
-            I accept the term of the agreement
+        <label class="form-field">
+          I accept the term of the agreement
           <input 
-            type="checkbox" 
-            name="term of the agreement" 
+            type="checkbox"
+            name="term of the agreement"
             required
           >
         </label>
       </fieldset>
-      <fieldset>
+      <fieldset class="field">
         <legend>Registration</legend>
-        <label class="foarm-field">
-              E-mail:
-          <input 
+        <label class="form-field">
+          E-mail:
+          <input
             type="email" 
             name="E-mail" 
             placeholder="email@example.com" 
@@ -75,52 +81,54 @@
             autocomplete="off"
           >
         </label>
-        <label class="foarm-field">
+        <label class="form-field">
           Password:
-          <input 
-              type="password" 
-              name="password" 
-              required 
-              minlength="6" 
-              maxlength="20" 
-              autocomplete="off"
+          <input
+            type="password" 
+            name="password" 
+            required 
+            minlength="6" 
+            maxlength="20" 
+            autocomplete="off"
           >
         </label>
       </fieldset>
 
-      <fieldset>
+      <fieldset class="field">
         <legend>An interesting fact about you!</legend>
-        <label class="foarm-field">
-          Do you love cats?
-          <input 
-            type="radio" 
-            name="cats?" 
-            value="Yes"
+        <div class="form-field">
+          <span class="cats">Do you love cats?</span>
+          <input
+            type="radio"
+            name="loveCats"
+            value="yes"
+            id="doLoveCats"
           >
-          Yes
-          <input 
-            type="radio" 
-            name="cats?" 
-            value="No"
+          <label for="doLoveCats">Yes</label>
+          <input
+            type="radio"
+            name="loveCats"
+            id="doNotLoveCats"
+            value="no"
           >
-          No
-        </label>
-        <label class="foarm-field">
+          <label for="doNotLoveCats">No</label>
+        </div>
+        <label class="form-field">
           What is your favorite color?
-          <input 
-            type="color" 
-            name="favorite color" 
+          <input
+            type="color"
+            name="favorite color"
             value="black"
           >
         </label>
-        <label class="foarm-field">
+        <label class="form-field">
           What time do you go to bed?
-          <input 
-            type="time" 
+          <input
+            type="time"
             name="time to sleep"
           >
         </label>
-        <label class="foarm-field">
+        <label class="form-field">
           What are your favorite brand of cars?
           <select name="cars" multiple>
             <option value="BMW">BMW</option>
@@ -128,19 +136,19 @@
             <option value="Lada">Lada</option>
           </select>
         </label>
-        <label class="foarm-field">
+        <label class="form-field">
           How do you rate our work?
           <input type="range" name="rate our work">
         </label>
       </fieldset>
 
-      <fieldset>
+      <fieldset class="field">
         <legend>Additional info:</legend>
-        <label class="foarm-field">
+        <label class="form-field">
           Comments:
           <textarea name="Comments" autocomplete="off"></textarea>
         </label>
-        <label class="foarm-field">
+        <label class="form-field">
           Would you recommend us?
           <select name="yes or no">
             <option value="yes">yes</option>
@@ -148,7 +156,7 @@
           </select>
         </label>
       </fieldset>
-      <label class="foarm-field">
+      <label class="form-field">
         <button type="submit" name="submit">
           Submit
         </button>
@@ -156,4 +164,5 @@
     </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
+
 </html>
